src/objects/Apttus_Config2__BillingPlan__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Config2__BillingEndDate__c</fullName>
        <description>The billing end date</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The billing end date</inlineHelpText>
        <label>Billing End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingStartDate__c</fullName>
        <description>The billing start date</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The billing start date</inlineHelpText>
        <label>Billing Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The plan description</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The plan description</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
</CustomObject>